kubernetes-stack/yamls/zookeeper-dep.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka
    component: zookeeper
  name: zookeeper
  #namespace: openfaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
      component: zookeeper
  template:
    metadata:
      labels:
        app: kafka
        component: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: wurstmeister/zookeeper:3.4.6
        ports:
        - containerPort: 2181
