kubernetes-stack/yamls/fakesmtp.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fakesmtp-depl
  labels:
    app: fakesmtp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fakesmtp-backend
  template:
    metadata:
      labels:
        app: fakesmtp-backend
    spec:
      containers:
      - name: fakesmtp
        image: luisreciomelero/fakesmtp:v1.0.1
---

kind: Service
apiVersion: v1
metadata:
  name: fakesmtp-svc
spec:
  type: ClusterIP
  selector:
    app: fakesmtp-backend
  ports:
  - port: 2525
    targetPort: 2525
