kubernetes-stack/yamls/k8s-fake-stmp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fakesmtp
  name: fakesmtp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fakesmtp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fakesmtp
    spec:
      containers:
      - image: brokenpip3/fake-smtp:2
        name: fakesmtp
        ports:
        - containerPort: 10025
          protocol: TCP
        resources: {}
        #env:
        #- name: "NOLOG"
        #  value: "1"
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: fakesmtp
  name: fakesmtp
spec:
  ports:
  - name: "10025"
    port: 10025
    protocol: TCP
    targetPort: 10025
  selector:
    app: fakesmtp
  type: ClusterIP
---
