kubernetes-stack/yamls/mg-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mg-depl
  labels:
    app: mg-backend
  #namespace: openfaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mg-backend
  template:
    metadata:
      labels:
        app: mg-backend
    spec:
      containers:
      - name: mg
        image: luisreciomelero/mg-quarkus-producer:v1.1.4
---

kind: Service
apiVersion: v1
metadata:
  name: mg-v1
spec:
  type: ClusterIP
  selector:
    app: mg-backend
  ports:
  - port: 8081
    targetPort: 8084
