kubernetes-stack/yamls/ms-create.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-create-depl
  labels:
    app: ms-create-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-create-depl
  template:
    metadata:
      labels:
        app: ms-create-depl
    spec:
      containers:
      - name: ms-create
        image: luisreciomelero/ms-quarkus-create:v1.0.6
        #image: luisreciomelero/ms-quarkus-create-native:v1.0.1
---

kind: Service
apiVersion: v1
metadata:
  name: ms-create
spec:
  type: ClusterIP
  selector:
    app: ms-create-depl
  ports:
  - port: 8086
    targetPort: 8086
