kubernetes-stack/yamls/ms-mailer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-mailer-depl
  labels:
    app: ms-mailer-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-mailer-backend
  template:
    metadata:
      labels:
        app: ms-mailer-backend
    spec:
      containers:
      - name: ms-mailer
        image: luisreciomelero/ms-quarkus-mailer:v1.0.1
---

kind: Service
apiVersion: v1
metadata:
  name: ms-mailer
spec:
  type: ClusterIP
  selector:
    app: ms-mailer-backend
  ports:
  - port: 8090
    targetPort: 8090
