kubernetes-stack/yamls/ms-read.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-read-depl
  labels:
    app: ms-read-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-read-depl
  template:
    metadata:
      labels:
        app: ms-read-depl
    spec:
      containers:
      - name: ms-read
        image: luisreciomelero/ms-quarkus-read:v1.0.9
---

kind: Service
apiVersion: v1
metadata:
  name: ms-read
spec:
  type: ClusterIP
  selector:
    app: ms-read-depl
  ports:
  - port: 8088
    targetPort: 8088
