kubernetes-stack/yamls/zookeeper-svc.yaml
 
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: kafka
    component: zookeeper
  #namespace: openfaas
spec:
  ports:
  - port: 2181
    name: zookeeper-port
    targetPort: 2181
    protocol: TCP
  selector:
    app: kafka
    component: zookeeper
