kubernetes-stack/yamls/ingress-rules-tfm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-depl
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: app-prueba
        image: luisreciomelero/simple-api-rest-quarkus:v1.0.2
        
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8084
      

---
#Solo esta parte deberia ir aqui
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: app1.tfm.com
    http:
      paths:
      - path: /appv1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: app-v1
            port:
              number: 8080
      - path: /mg(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mg-v1
            port:
              number: 8081
